Tests_results/invalid_tests/invalid_format.as
; Bad formatting

LABEL :    mov r1, r2
add r3 r4
cmp #1, , r2
mov r3 r4
sub r1, r2 extraText
prn #4, r1
jmp r3 r4
.data 4,5,6,
.string "text
.data 1 2 3
; comment
stop
rts r1